# quda-grid-test

./: CMakeLists.txt  build.sh  main.cc  run.sh
